[gd_scene load_steps=4 format=3 uid="uid://ciqv48t78p08l"]

[ext_resource type="Script" path="res://Interaction/Scripts/interaction_manager.gd" id="1_brdn4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h08e8"]
radius = 38.71

[sub_resource type="LabelSettings" id="LabelSettings_3yqar"]
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="InteractionManager" type="Node2D"]
script = ExtResource("1_brdn4")

[node name="InteractRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
shape = SubResource("CircleShape2D_h08e8")

[node name="InteractLabel" type="Label" parent="."]
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -51.0
offset_right = 52.5
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "[E] to Interact"
label_settings = SubResource("LabelSettings_3yqar")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="InteractRange" to="." method="_on_interact_range_area_entered"]
[connection signal="area_exited" from="InteractRange" to="." method="_on_interact_range_area_exited"]
